tests/ui/issues/issue-53348.stderr
error[E0308]: mismatched types
  --> $DIR/issue-53348.rs:10:13
   |
LL |     let mut a = String::new();
   |                 ------------- expected due to this value
LL |     for i in v {
LL |         a = *i.to_string();
   |             ^^^^^^^^^^^^^^ expected `String`, found `str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
